[package]
name = "commenter"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.1"
axum-extra = { version = "0.7.0", features = [ "cookie" ] }
axum-macros = "0.3.0"
chrono = { version = "0.4.22", features = ["serde"] }
futures = "0.3.28"
mongodb = { version = "2.6.0", default-features = false, features = ["async-std-runtime"] }
num-traits = "0.2.15"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.21.2", features = ["full"] }
tonic = "0.9.0"
tower-http = { version = "0.4.0", features = ["cors"] }
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"] }
uuid = { version = "1.2.1", features = ["serde"] }
validator = { version = "0.16.0", features = ["derive"] }
